kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hudapobuda-deployment
  labels:
    app: hudapobuda
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hudapobuda
  template:
    metadata:
      labels:
        app: hudapobuda
    spec:
      securityContext:
        fsGroup: 1000
      volumes:
        - name: hudapobuda-persistent-storage
          persistentVolumeClaim:
            claimName: hudapobuda-pvc
      containers:
        - name: hudapobuda
          image: hudapobuda
          volumeMounts:
            - name: hudapobuda-persistent-storage
              mountPath: /pvc
          command:
            - gunicorn
            - hudapobuda.wsgi:application
            - -b
            - 0.0.0.0:8000
            - --log-level
            - DEBUG
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: 1Gi
              cpu: 500m
            limits:
              memory: 1Gi
              cpu: 500m
        - name: hudapobuda-nginx
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          image: nginx:alpine
          volumeMounts:
            - name: hudapobuda-persistent-storage
              mountPath: /usr/share/nginx/html
          resources:
            requests:
              memory: 500Mi
              cpu: 200m
            limits:
              memory: 500Mi
              cpu: 200m
