kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hudapobuda-staging
spec:
  selector:
    app: hudapobuda-staging
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: hudapobuda-staging-nginx
spec:
  selector:
    app: hudapobuda-staging
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
